[package]
name = "bluestation-bs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bluestation-bs"
path = "src/main.rs"

[features]
# Compile the Asterisk SIP/RTP bridge (and link the native TETRA codec) into the
# Flow35 device binary. Enabled by default so `cargo build --release` preserves
# the existing Asterisk integration; use `--no-default-features` to omit it.
default = ["asterisk"]
asterisk = ["tetra-entities/asterisk"]

[dependencies]
tetra-core = { workspace = true }
tetra-config = { workspace = true }
tetra-saps = { workspace = true }
tetra-entities = { workspace = true }

clap = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
rustls = { version = "0.23", default-features = false }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[lints]
workspace = true
